src/objects/Account_Squad_Assignment__c.object
<CustomObject>
    <description>Purpose of this object is to hold data which is used in apex calculations to determine for a given closed won opportunitys&apos; account what squad members should be assigned based on the DMA Zip Code related to the account.</description>
    <fields>
        <fullName>MSE_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSE User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Squads_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NHS_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NHS User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Squads_Assignment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <globalPicklist>Specialty</globalPicklist>
        <label>Specialty</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_3__c</fullName>
        <description>First 3 digits of zip code</description>
        <label>Zip 3</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Account Squad Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Zip_3__c</columns>
        <columns>Specialty__c</columns>
        <columns>MSE_User__c</columns>
        <columns>NHS_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASA{0000000000}</displayFormat>
        <label>Account Squad Assignment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Squads Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>